fixed ie8 img stretch issue

--- a/chat.css
+++ b/chat.css
@@ -202,6 +202,8 @@
 
     .gi-chat .gi-images .gi-image {
       max-width: 100%;
+      max-height: 100%;
+      width: auto;
       height: auto;
       margin-top: 8px;
       border-radius: 2px;
